// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileRenderer component snapshot has error 404 1`] = `
<FileCard
  file={
    Object {
      "description": "file description 0",
      "downloadUrl": "/url-path/fake_file_0.pdf",
      "name": "fake_file_0.pdf",
    }
  }
>
  <ErrorBanner
    actions={
      Array [
        Object {
          "id": "retry",
          "message": Object {
            "defaultMessage": "Retry",
            "description": "Retry button for error in file renderer",
            "id": "ora-grading.ResponseDisplay.FileRenderer.retryButton",
          },
          "onClick": [Function],
        },
      ]
    }
    headingMessage={
      Object {
        "defaultMessage": "File not found",
        "description": "File not found error message",
        "id": "ora-grading.ResponseDisplay.FileRenderer.fileNotFound",
      }
    }
  >
    <FormattedMessage
      defaultMessage="File not found"
      description="File not found error message"
      id="ora-grading.ResponseDisplay.FileRenderer.fileNotFound"
    />
  </ErrorBanner>
</FileCard>
`;

exports[`FileRenderer component snapshot has error 500 1`] = `
<FileCard
  file={
    Object {
      "description": "file description 0",
      "downloadUrl": "/url-path/fake_file_0.pdf",
      "name": "fake_file_0.pdf",
    }
  }
>
  <ErrorBanner
    actions={
      Array [
        Object {
          "id": "retry",
          "message": Object {
            "defaultMessage": "Retry",
            "description": "Retry button for error in file renderer",
            "id": "ora-grading.ResponseDisplay.FileRenderer.retryButton",
          },
          "onClick": [Function],
        },
      ]
    }
    headingMessage={
      Object {
        "defaultMessage": "Unknown errors",
        "description": "Unknown errors message",
        "id": "ora-grading.ResponseDisplay.FileRenderer.unknownError",
      }
    }
  >
    <FormattedMessage
      defaultMessage="Unknown errors"
      description="Unknown errors message"
      id="ora-grading.ResponseDisplay.FileRenderer.unknownError"
    />
  </ErrorBanner>
</FileCard>
`;

exports[`FileRenderer component snapshot successful rendering bmp 1`] = `
<FileCard
  file={
    Object {
      "description": "file description 3",
      "downloadUrl": "/url-path/fake_file_3.bmp",
      "name": "fake_file_3.bmp",
    }
  }
>
  <ImageRenderer
    fileName="fake_file_3.bmp"
    onError={[MockFunction onError]}
    onSuccess={[MockFunction onSuccess]}
    url="/url-path/fake_file_3.bmp"
  />
</FileCard>
`;

exports[`FileRenderer component snapshot successful rendering jpeg 1`] = `
<FileCard
  file={
    Object {
      "description": "file description 2",
      "downloadUrl": "/url-path/fake_file_2.jpeg",
      "name": "fake_file_2.jpeg",
    }
  }
>
  <ImageRenderer
    fileName="fake_file_2.jpeg"
    onError={[MockFunction onError]}
    onSuccess={[MockFunction onSuccess]}
    url="/url-path/fake_file_2.jpeg"
  />
</FileCard>
`;

exports[`FileRenderer component snapshot successful rendering jpg 1`] = `
<FileCard
  file={
    Object {
      "description": "file description 1",
      "downloadUrl": "/url-path/fake_file_1.jpg",
      "name": "fake_file_1.jpg",
    }
  }
>
  <ImageRenderer
    fileName="fake_file_1.jpg"
    onError={[MockFunction onError]}
    onSuccess={[MockFunction onSuccess]}
    url="/url-path/fake_file_1.jpg"
  />
</FileCard>
`;

exports[`FileRenderer component snapshot successful rendering pdf 1`] = `
<FileCard
  file={
    Object {
      "description": "file description 0",
      "downloadUrl": "/url-path/fake_file_0.pdf",
      "name": "fake_file_0.pdf",
    }
  }
>
  <PDFRenderer
    fileName="fake_file_0.pdf"
    onError={[MockFunction onError]}
    onSuccess={[MockFunction onSuccess]}
    url="/url-path/fake_file_0.pdf"
  />
</FileCard>
`;

exports[`FileRenderer component snapshot successful rendering png 1`] = `
<FileCard
  file={
    Object {
      "description": "file description 4",
      "downloadUrl": "/url-path/fake_file_4.png",
      "name": "fake_file_4.png",
    }
  }
>
  <ImageRenderer
    fileName="fake_file_4.png"
    onError={[MockFunction onError]}
    onSuccess={[MockFunction onSuccess]}
    url="/url-path/fake_file_4.png"
  />
</FileCard>
`;

exports[`FileRenderer component snapshot successful rendering txt 1`] = `
<FileCard
  file={
    Object {
      "description": "file description 5",
      "downloadUrl": "/url-path/fake_file_5.txt",
      "name": "fake_file_5.txt",
    }
  }
>
  <TXTRenderer
    fileName="fake_file_5.txt"
    onError={[MockFunction onError]}
    onSuccess={[MockFunction onSuccess]}
    url="/url-path/fake_file_5.txt"
  />
</FileCard>
`;
